--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0"
   }
 }
 </script>
+<script type="module" src="index.tsx"></script>
 </head>
 <body>
     <div id="root"></div>
